tests/src/frontend/syntax/invalid/fun_typo_class_member.sk
class X() {
  static fn f(): void {}
}
